Add the Sigmoid back

--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -181,7 +181,7 @@
         "            # There is a dropdown with hints if you need them! \n",
         "            #### START CODE HERE ####\n",
         "            nn.Linear(hidden_dim * 8, im_dim),\n",
-        "            #nn.Sigmoid()\n",
+        "            nn.Sigmoid()\n",
         "            #### END CODE HERE ####\n",
         "        )\n",
         "    def forward(self, noise):\n",
