Add normalization function

--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -85,6 +85,7 @@
         }
       ],
       "source": [
+        "import numpy as np\n",
         "import torch\n",
         "from torch import nn\n",
         "from tqdm.auto import tqdm\n",
@@ -120,6 +121,36 @@
         "# Load the intel lab data. \n",
         "my_training_data = MyDataset()\n",
         "df_train = my_training_data.train"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def MinMaxScaler(data):\n",
+        "    \"\"\"Min-Max Normalizer.\n",
+        "    \n",
+        "    Args:\n",
+        "      - data: raw data\n",
+        "      \n",
+        "    Returns:\n",
+        "      - norm_data: normalized data\n",
+        "      - min_val: minimum values (for renormalization)\n",
+        "      - max_val: maximum values (for renormalization)\n",
+        "    \"\"\"    \n",
+        "    min_val = np.min(np.min(data, axis = 0), axis = 0)\n",
+        "    data = data - min_val\n",
+        "      \n",
+        "    max_val = np.max(np.max(data, axis = 0), axis = 0)\n",
+        "    norm_data = data / (max_val + 1e-7)\n",
+        "      \n",
+        "    return norm_data, min_val, max_val\n",
+        "  \n",
+        "  \n",
+        "# Normalization\n",
+        "ori_data, min_val, max_val = MinMaxScaler(df_train)"
       ]
     },
     {
@@ -317,7 +348,7 @@
         "lr = 0.00001\n",
         "\n",
         "# Load MNIST dataset as tensors\n",
-        "dataloader = DataLoader( df_train,\n",
+        "dataloader = DataLoader( ori_data,\n",
         "    batch_size=batch_size,\n",
         "    shuffle=False)\n",
         "\n",
@@ -5781,7 +5812,11 @@
         "id": "6eRA1YypbD-_"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Renormalization\n",
+        "generated_data = fake * max_val\n",
+        "generated_data = generated_data + min_val\n"
+      ]
     }
   ],
   "metadata": {
