remove the mean

--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -221,7 +221,7 @@
         "    # NOTE: To use this on GPU with device='cuda', make sure to pass the device \n",
         "    # argument to the function you use to generate the noise.\n",
         "    #### START CODE HERE ####\n",
-        "    return torch.mean(df_train).item() * torch.randn(n_samples, z_dim, device = device)"
+        "    return  torch.randn(n_samples, z_dim, device = device)"
       ]
     },
     {
