Fix the float/scalr error

--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -118,7 +118,8 @@
       "source": [
         "# Load the intel lab data. \n",
         "my_training_data = MyDataset()\n",
-        "df_train = my_training_data.train"
+        "df_train = my_training_data.train\n",
+        "df_train = df_train.float()"
       ]
     },
     {
@@ -5635,8 +5636,7 @@
         }
       ],
       "source": [
-        "plt.plot(real.cpu().detach().numpy())\n",
-        "plt.plot(fake.cpu().detach().numpy())"
+        "plt.plot(real.cpu().detach().numpy())\n"
       ]
     },
     {
@@ -5663,7 +5663,7 @@
         }
       ],
       "source": [
-        "fake.cpu().detach().numpy()"
+        "plt.plot(fake.cpu().detach().numpy())"
       ]
     }
   ],
