Add MinMax function

--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -79,7 +79,7 @@
               "<torch._C.Generator at 0x7f9e1dcec7f0>"
             ]
           },
-          "execution_count": 19,
+          "execution_count": 41,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 42,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -120,6 +120,34 @@
         "my_training_data = MyDataset()\n",
         "df_train = my_training_data.train\n",
         "df_train = df_train.float()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def MinMaxScaler(data):\n",
+        "    \"\"\"Min-Max Normalizer.\n",
+        "    \n",
+        "    Args:\n",
+        "      - data: raw data\n",
+        "      \n",
+        "    Returns:\n",
+        "      - norm_data: normalized data\n",
+        "      - min_val: minimum values (for renormalization)\n",
+        "      - max_val: maximum values (for renormalization)\n",
+        "    \"\"\"    \n",
+        "    min_val = torch.min(data)\n",
+        "    data = data - min_val\n",
+        "    max_val = torch.max(data)\n",
+        "    norm_data = data / (max_val + 1e-7)\n",
+        "      \n",
+        "    return norm_data, min_val, max_val\n",
+        "\n",
+        "# Normalization\n",
+        "ori_data, min_val, max_val = MinMaxScaler(df_train)"
       ]
     },
     {
@@ -317,7 +345,7 @@
         "lr = 0.00001\n",
         "\n",
         "# Load MNIST dataset as tensors\n",
-        "dataloader = DataLoader( df_train,\n",
+        "dataloader = DataLoader( ori_data,\n",
         "    batch_size=batch_size,\n",
         "    shuffle=False)\n",
         "\n",
@@ -455,20 +483,6 @@
         "    gen_loss = criterion(pred_f, ground_truth_)\n",
         "    #### END CODE HERE ####\n",
         "    return gen_loss"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 30,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "cur_step = 0\n",
-        "mean_generator_loss = 0\n",
-        "mean_discriminator_loss = 0\n",
-        "test_generator = True # Whether the generator should be tested\n",
-        "gen_loss = False\n",
-        "error = False\n"
       ]
     },
     {
@@ -5699,7 +5713,11 @@
         "id": "N1zsX7hTCzPz"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "# Renormalization\n",
+        "  generated_data = fake * max_val\n",
+        "  generated_data = generated_data + min_val"
+      ]
     }
   ],
   "metadata": {
