change the epoch size

--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -76,10 +76,10 @@
         {
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7f9e1dcec7f0>"
+              "<torch._C.Generator at 0x7fd28a4e0770>"
             ]
           },
-          "execution_count": 53,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -98,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -106,40 +106,12 @@
         "id": "TtIyrXSkcCut",
         "outputId": "478c00b7-da13-4b0e-9495-be31db04c49f"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "The day with the least missing values: 2004-03-08\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# Load the intel lab data. \n",
         "my_training_data = MyDataset()\n",
         "df_train = my_training_data.train\n",
         "df_train = df_train.float()"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 56,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "2198"
-            ]
-          },
-          "execution_count": 56,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "len(df_train)"
       ]
     },
     {
@@ -363,7 +335,7 @@
         "n_epochs = 200\n",
         "z_dim = 64\n",
         "display_step = 500\n",
-        "batch_size = 157\n",
+        "batch_size = 31\n",
         "lr = 0.00001\n",
         "\n",
         "# Load MNIST dataset as tensors\n",
