change the learninng rate

--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -336,7 +336,7 @@
         "z_dim = 64\n",
         "display_step = 500\n",
         "batch_size = 31\n",
-        "lr = 0.00001\n",
+        "lr = 0.001\n",
         "\n",
         "# Load MNIST dataset as tensors\n",
         "dataloader = DataLoader( ori_data,\n",
@@ -5763,7 +5763,9 @@
       ],
       "source": [
         "plt.plot(generated_data.cpu().detach().numpy(), label = 'fake')\n",
-        "plt.plot(real_data.cpu().detach().numpy(), label = 'real')\n"
+        "plt.plot(real_data.cpu().detach().numpy(), label = 'real')\n",
+        "\n",
+        "plt.legend()\n"
       ]
     },
     {
