Change the batch size

--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,12 +74,20 @@
       },
       "outputs": [
         {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/var/folders/v9/hb1lc_zn3mbc6tnkhyqsjpgr0000gn/T/ipykernel_97631/1841681714.py:1: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
+            "  import imp\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
               "<torch._C.Generator at 0x7fd28a4e0770>"
             ]
           },
-          "execution_count": 1,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -101,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -115,6 +123,26 @@
         "my_training_data = MyDataset()\n",
         "df_train = my_training_data.train\n",
         "df_train = df_train.float()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "13547"
+            ]
+          },
+          "execution_count": 7,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "len(df_train)"
       ]
     },
     {
@@ -142,7 +170,7 @@
         "n_epochs = 200\n",
         "z_dim = 64\n",
         "display_step = 500\n",
-        "batch_size = 31\n",
+        "batch_size = 1440\n",
         "lr = 0.000001\n",
         "\n",
         "# Load MNIST dataset as tensors\n",
