--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -5253,6 +5253,7 @@
         "test_generator = True # Whether the generator should be tested\n",
         "gen_loss = False\n",
         "error = False\n",
+        "\n",
         "for epoch in range(n_epochs):\n",
         "  \n",
         "    # Dataloader returns the batches\n",
@@ -5310,6 +5311,96 @@
         "            mean_generator_loss = 0\n",
         "            mean_discriminator_loss = 0\n",
         "        cur_step += 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "n_epochs = 100\n",
+        "z_dim = 64\n",
+        "display_step = 500\n",
+        "batch_size = 128\n",
+        "lr = 0.0002\n",
+        "beta_1 = 0.5\n",
+        "beta_2 = 0.999\n",
+        "c_lambda = 10\n",
+        "crit_repeats = 5\n",
+        "device = 'cuda'\n",
+        "\n",
+        "crit = Critic().to(device)\n",
+        "crit_opt = torch.optim.Adam(crit.parameters(), lr=lr, betas=(beta_1, beta_2))\n",
+        "\n",
+        "cur_step = 0\n",
+        "generator_losses = []\n",
+        "critic_losses = []\n",
+        "for epoch in range(n_epochs):\n",
+        "    # Dataloader returns the batches\n",
+        "    for real, _ in tqdm(dataloader):\n",
+        "        cur_batch_size = len(real)\n",
+        "        real = real.to(device)\n",
+        "\n",
+        "        mean_iteration_critic_loss = 0\n",
+        "        for _ in range(crit_repeats):\n",
+        "            ### Update critic ###\n",
+        "            crit_opt.zero_grad()\n",
+        "            fake_noise = sensegan.get_noise(cur_batch_size, z_dim, device=device)\n",
+        "            fake = gen(fake_noise)\n",
+        "            crit_fake_pred = crit(fake.detach())\n",
+        "            crit_real_pred = crit(real)\n",
+        "\n",
+        "            epsilon = torch.rand(len(real), 1, 1, 1, device=device, requires_grad=True)\n",
+        "            gradient = sensegan.get_gradient(crit, real, fake.detach(), epsilon)\n",
+        "            gp = sensegan.gradient_penalty(gradient)\n",
+        "            crit_loss = sensegan.get_crit_loss(crit_fake_pred, crit_real_pred, gp, c_lambda)\n",
+        "\n",
+        "            # Keep track of the average critic loss in this batch\n",
+        "            mean_iteration_critic_loss += crit_loss.item() / crit_repeats\n",
+        "            # Update gradients\n",
+        "            crit_loss.backward(retain_graph=True)\n",
+        "            # Update optimizer\n",
+        "            crit_opt.step()\n",
+        "        critic_losses += [mean_iteration_critic_loss]\n",
+        "\n",
+        "        ### Update generator ###\n",
+        "        gen_opt.zero_grad()\n",
+        "        fake_noise_2 = sensegan.get_noise(cur_batch_size, z_dim, device=device)\n",
+        "        fake_2 = gen(fake_noise_2)\n",
+        "        crit_fake_pred = crit(fake_2)\n",
+        "        \n",
+        "        gen_loss = sensegan.get_gen_loss(crit_fake_pred)\n",
+        "        gen_loss.backward()\n",
+        "\n",
+        "        # Update the weights\n",
+        "        gen_opt.step()\n",
+        "\n",
+        "        # Keep track of the average generator loss\n",
+        "        generator_losses += [gen_loss.item()]\n",
+        "\n",
+        "        ### Visualization code ###\n",
+        "        if cur_step % display_step == 0 and cur_step > 0:\n",
+        "            gen_mean = sum(generator_losses[-display_step:]) / display_step\n",
+        "            crit_mean = sum(critic_losses[-display_step:]) / display_step\n",
+        "            print(f\"Epoch {epoch}, step {cur_step}: Generator loss: {gen_mean}, critic loss: {crit_mean}\")\n",
+        "            step_bins = 20\n",
+        "            num_examples = (len(generator_losses) // step_bins) * step_bins\n",
+        "            plt.plot(\n",
+        "                range(num_examples // step_bins), \n",
+        "                torch.Tensor(generator_losses[:num_examples]).view(-1, step_bins).mean(1),\n",
+        "                label=\"Generator Loss\"\n",
+        "            )\n",
+        "            plt.plot(\n",
+        "                range(num_examples // step_bins), \n",
+        "                torch.Tensor(critic_losses[:num_examples]).view(-1, step_bins).mean(1),\n",
+        "                label=\"Critic Loss\"\n",
+        "            )\n",
+        "            plt.legend()\n",
+        "            plt.show()\n",
+        "\n",
+        "        cur_step += 1\n"
       ]
     },
     {
