--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -172,6 +172,8 @@
         "display_step = 500\n",
         "batch_size = 1440\n",
         "lr = 0.0002\n",
+        "beta_1 = 0.5\n",
+        "beta_2 = 0.999\n",
         "\n",
         "# Load MNIST dataset as tensors\n",
         "dataloader = DataLoader( ori_data,\n",
@@ -190,9 +192,9 @@
       "outputs": [],
       "source": [
         "gen = sensegan.Generator(z_dim).to(device)\n",
-        "gen_opt = torch.optim.Adam(gen.parameters(), lr=lr)\n",
-        "disc = sensegan.Discriminator().to(device) \n",
-        "disc_opt = torch.optim.Adam(disc.parameters(), lr=lr)"
+        "gen_opt = torch.optim.Adam(gen.parameters(), lr=lr, betas=(beta_1, beta_2))\n",
+        "crit = sensegan.Critic().to(device) \n",
+        "crit_opt = torch.optim.Adam(crit.parameters(), lr=lr, betas=(beta_1, beta_2))"
       ]
     },
     {
@@ -5324,8 +5326,7 @@
         "display_step = 500\n",
         "batch_size = 128\n",
         "lr = 0.0002\n",
-        "beta_1 = 0.5\n",
-        "beta_2 = 0.999\n",
+        "\n",
         "c_lambda = 10\n",
         "crit_repeats = 5\n",
         "device = 'cuda'\n",
@@ -5338,7 +5339,7 @@
         "critic_losses = []\n",
         "for epoch in range(n_epochs):\n",
         "    # Dataloader returns the batches\n",
-        "    for real, _ in tqdm(dataloader):\n",
+        "    for real in tqdm(dataloader):\n",
         "        cur_batch_size = len(real)\n",
         "        real = real.to(device)\n",
         "\n",
@@ -5348,8 +5349,8 @@
         "            crit_opt.zero_grad()\n",
         "            fake_noise = sensegan.get_noise(cur_batch_size, z_dim, device=device)\n",
         "            fake = gen(fake_noise)\n",
-        "            crit_fake_pred = crit(fake.detach())\n",
-        "            crit_real_pred = crit(real)\n",
+        "            crit_fake_pred = sensegan.crit(fake.detach())\n",
+        "            crit_real_pred = sensegan.crit(real)\n",
         "\n",
         "            epsilon = torch.rand(len(real), 1, 1, 1, device=device, requires_grad=True)\n",
         "            gradient = sensegan.get_gradient(crit, real, fake.detach(), epsilon)\n",
