--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -5331,7 +5331,7 @@
         "crit_repeats = 5\n",
         "device = 'cuda'\n",
         "\n",
-        "crit = Critic().to(device)\n",
+        "crit = sensegan.Critic().to(device)\n",
         "crit_opt = torch.optim.Adam(crit.parameters(), lr=lr, betas=(beta_1, beta_2))\n",
         "\n",
         "cur_step = 0\n",
