update the critic

--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -5344,8 +5344,8 @@
         "            crit_opt.zero_grad()\n",
         "            fake_noise = sensegan.get_noise(cur_batch_size, z_dim, device=device)\n",
         "            fake = gen(fake_noise)\n",
-        "            crit_fake_pred = sensegan.crit(fake.detach())\n",
-        "            crit_real_pred = sensegan.crit(real)\n",
+        "            crit_fake_pred = crit(fake.detach())\n",
+        "            crit_real_pred = crit(real)\n",
         "\n",
         "            epsilon = torch.rand(len(real), 1, 1, 1, device=device, requires_grad=True)\n",
         "            gradient = sensegan.get_gradient(crit, real, fake.detach(), epsilon)\n",
