take the transpose of the real

--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -179,7 +179,7 @@
         "crit_repeats = 5\n",
         "\n",
         "# Load MNIST dataset as tensors\n",
-        "dataloader = DataLoader( ori_data,\n",
+        "dataloader = DataLoader( ori_data[:-587],\n",
         "    batch_size=batch_size,\n",
         "    shuffle=False)\n",
         "\n",
@@ -225,7 +225,7 @@
         "            fake_noise = sensegan.get_noise(cur_batch_size, z_dim, device=device)\n",
         "            fake = gen(fake_noise)\n",
         "            crit_fake_pred = crit(fake.detach())\n",
-        "            crit_real_pred = crit(real)\n",
+        "            crit_real_pred = crit(torch.transpose(real, 0, 1))\n",
         "\n",
         "            epsilon = torch.rand(len(real), 1, 1, 1, device=device, requires_grad=True)\n",
         "            gradient = sensegan.get_gradient(crit, real, fake.detach(), epsilon)\n",
