--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -197,7 +197,16 @@
         "gen = sensegan.Generator(z_dim).to(device)\n",
         "gen_opt = torch.optim.Adam(gen.parameters(), lr=lr, betas=(beta_1, beta_2))\n",
         "crit = sensegan.Critic().to(device) \n",
-        "crit_opt = torch.optim.Adam(crit.parameters(), lr=lr, betas=(beta_1, beta_2))"
+        "crit_opt = torch.optim.Adam(crit.parameters(), lr=lr, betas=(beta_1, beta_2))\n",
+        "\n",
+        "def weights_init(m):\n",
+        "    if isinstance(m, nn.Conv2d) or isinstance(m, nn.ConvTranspose2d):\n",
+        "        torch.nn.init.normal_(m.weight, 0.0, 0.02)\n",
+        "    if isinstance(m, nn.BatchNorm2d):\n",
+        "        torch.nn.init.normal_(m.weight, 0.0, 0.02)\n",
+        "        torch.nn.init.constant_(m.bias, 0)\n",
+        "gen = gen.apply(weights_init)\n",
+        "crit = crit.apply(weights_init)"
       ]
     },
     {
@@ -206,9 +215,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "crit = sensegan.Critic().to(device)\n",
-        "crit_opt = torch.optim.Adam(crit.parameters(), lr=lr, betas=(beta_1, beta_2))\n",
-        "\n",
         "cur_step = 0\n",
         "generator_losses = []\n",
         "critic_losses = []\n",
