--- a/SenseGAN.ipynb
+++ b/SenseGAN.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -26,12 +26,10 @@
           "output_type": "stream",
           "text": [
             "Cloning into 'paper-4'...\n",
-            "remote: Enumerating objects: 188, done.\u001b[K\n",
-            "remote: Counting objects: 100% (188/188), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (134/134), done.\u001b[K\n",
-            "remote: Total 188 (delta 104), reused 117 (delta 45), pack-reused 0\u001b[K\n",
-            "Receiving objects: 100% (188/188), 10.04 MiB | 19.58 MiB/s, done.\n",
-            "Resolving deltas: 100% (104/104), done.\n"
+            "remote: Enumerating objects: 302, done.\u001b[K\n",
+            "remote: Counting objects: 100% (71/71), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (47/47), done.\u001b[K\n",
+            "^Cceiving objects:  23% (70/302), 9.43 MiB | 1.34 MiB/s     \n"
           ]
         }
       ],
@@ -64,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -77,17 +75,17 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "/var/folders/v9/hb1lc_zn3mbc6tnkhyqsjpgr0000gn/T/ipykernel_97631/1841681714.py:1: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
+            "/var/folders/v9/hb1lc_zn3mbc6tnkhyqsjpgr0000gn/T/ipykernel_48548/250934574.py:1: DeprecationWarning: the imp module is deprecated in favour of importlib and slated for removal in Python 3.12; see the module's documentation for alternative uses\n",
             "  import imp\n"
           ]
         },
         {
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x7fd28a4e0770>"
+              "<torch._C.Generator at 0x7fbc1bcfc850>"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 1,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -109,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -127,27 +125,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "13547"
-            ]
-          },
-          "execution_count": 7,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "len(df_train)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 91,
+      "execution_count": 3,
       "metadata": {
         "id": "C-BMPWMbIUQj"
       },
@@ -159,7 +137,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 4,
       "metadata": {
         "id": "yEz9juVCcCuz"
       },
@@ -167,8 +145,8 @@
       "source": [
         "# Set your parameters\n",
         "criterion = nn.BCEWithLogitsLoss()\n",
-        "n_epochs = 100\n",
-        "z_dim = 64\n",
+        "n_epochs = 200\n",
+        "z_dim = 1\n",
         "display_step = 500\n",
         "batch_size = 1440\n",
         "lr = 0.0002\n",
@@ -176,19 +154,19 @@
         "beta_2 = 0.999\n",
         "lr = 0.0002\n",
         "c_lambda = 10\n",
-        "crit_repeats = 5\n",
+        "crit_repeats = 4\n",
         "\n",
         "# Load MNIST dataset as tensors\n",
         "dataloader = DataLoader( ori_data[:-587],\n",
         "    batch_size=batch_size,\n",
         "    shuffle=False)\n",
         "\n",
-        "device = 'cuda'"
+        "device = 'cpu'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 5,
       "metadata": {
         "id": "q_g9R-8IcCuz"
       },
@@ -211,9 +189,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "application/vnd.jupyter.widget-view+json": {
+              "model_id": "e9c951d2c86e49a78acfafbe8ea5d99c",
+              "version_major": 2,
+              "version_minor": 0
+            },
+            "text/plain": [
+              "  0%|          | 0/9 [00:00<?, ?it/s]"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "ename": "RuntimeError",
+          "evalue": "Given groups=1, weight of size [1440, 1, 1], expected input[1440, 1440, 1] to have 1 channels, but got 1440 channels instead",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[1;32m/Users/faigaalawad/repos2022/paper#4-code/SenseGAN.ipynb Cell 9\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/faigaalawad/repos2022/paper%234-code/SenseGAN.ipynb#ch0000026?line=16'>17</a>\u001b[0m crit_real_pred \u001b[39m=\u001b[39m crit(torch\u001b[39m.\u001b[39mtranspose(real, \u001b[39m0\u001b[39m, \u001b[39m1\u001b[39m))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/faigaalawad/repos2022/paper%234-code/SenseGAN.ipynb#ch0000026?line=18'>19</a>\u001b[0m epsilon \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mrand(\u001b[39mlen\u001b[39m(real), \u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m, device\u001b[39m=\u001b[39mdevice, requires_grad\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/faigaalawad/repos2022/paper%234-code/SenseGAN.ipynb#ch0000026?line=19'>20</a>\u001b[0m gradient \u001b[39m=\u001b[39m sensegan\u001b[39m.\u001b[39;49mget_gradient(crit, real, fake\u001b[39m.\u001b[39;49mdetach(), epsilon)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/faigaalawad/repos2022/paper%234-code/SenseGAN.ipynb#ch0000026?line=20'>21</a>\u001b[0m gp \u001b[39m=\u001b[39m sensegan\u001b[39m.\u001b[39mgradient_penalty(gradient)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/faigaalawad/repos2022/paper%234-code/SenseGAN.ipynb#ch0000026?line=21'>22</a>\u001b[0m crit_loss \u001b[39m=\u001b[39m sensegan\u001b[39m.\u001b[39mget_crit_loss(crit_fake_pred, crit_real_pred, gp, c_lambda)\n",
+            "File \u001b[0;32m~/repos2022/paper#4-code/sensegan.py:119\u001b[0m, in \u001b[0;36mget_gradient\u001b[0;34m(crit, real, fake, epsilon)\u001b[0m\n\u001b[1;32m    116\u001b[0m mixed_images \u001b[39m=\u001b[39m real \u001b[39m*\u001b[39m epsilon \u001b[39m+\u001b[39m fake \u001b[39m*\u001b[39m (\u001b[39m1\u001b[39m \u001b[39m-\u001b[39m epsilon)\n\u001b[1;32m    118\u001b[0m \u001b[39m# Calculate the critic's scores on the mixed images\u001b[39;00m\n\u001b[0;32m--> 119\u001b[0m mixed_scores \u001b[39m=\u001b[39m crit(mixed_images)\n\u001b[1;32m    121\u001b[0m \u001b[39m# Take the gradient of the scores with respect to the images\u001b[39;00m\n\u001b[1;32m    122\u001b[0m gradient \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mautograd\u001b[39m.\u001b[39mgrad(\n\u001b[1;32m    123\u001b[0m     \u001b[39m# Note: You need to take the gradient of outputs with respect to inputs.\u001b[39;00m\n\u001b[1;32m    124\u001b[0m     \u001b[39m# This documentation may be useful, but it should not be necessary:\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    133\u001b[0m     retain_graph\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m    134\u001b[0m )[\u001b[39m0\u001b[39m]\n",
+            "File \u001b[0;32m~/opt/anaconda3/envs/senseGAN/lib/python3.10/site-packages/torch/nn/modules/module.py:1130\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1126\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1127\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1128\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1129\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1130\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1131\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1132\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+            "File \u001b[0;32m~/repos2022/paper#4-code/sensegan.py:207\u001b[0m, in \u001b[0;36mCritic.forward\u001b[0;34m(self, image)\u001b[0m\n\u001b[1;32m    200\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, image):\n\u001b[1;32m    201\u001b[0m     \u001b[39m'''\u001b[39;00m\n\u001b[1;32m    202\u001b[0m \u001b[39m    Function for completing a forward pass of the critic: Given an image tensor, \u001b[39;00m\n\u001b[1;32m    203\u001b[0m \u001b[39m    returns a 1-dimension tensor representing fake/real.\u001b[39;00m\n\u001b[1;32m    204\u001b[0m \u001b[39m    Parameters:\u001b[39;00m\n\u001b[1;32m    205\u001b[0m \u001b[39m        image: a flattened image tensor with dimension (im_chan)\u001b[39;00m\n\u001b[1;32m    206\u001b[0m \u001b[39m    '''\u001b[39;00m\n\u001b[0;32m--> 207\u001b[0m     crit_pred \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcrit(image)\n\u001b[1;32m    208\u001b[0m     \u001b[39m#return crit_pred.view(len(crit_pred), -1)\u001b[39;00m\n\u001b[1;32m    209\u001b[0m     \u001b[39mreturn\u001b[39;00m crit_pred\n",
+            "File \u001b[0;32m~/opt/anaconda3/envs/senseGAN/lib/python3.10/site-packages/torch/nn/modules/module.py:1130\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1126\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1127\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1128\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1129\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1130\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1131\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1132\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+            "File \u001b[0;32m~/opt/anaconda3/envs/senseGAN/lib/python3.10/site-packages/torch/nn/modules/container.py:139\u001b[0m, in \u001b[0;36mSequential.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    137\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m):\n\u001b[1;32m    138\u001b[0m     \u001b[39mfor\u001b[39;00m module \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m:\n\u001b[0;32m--> 139\u001b[0m         \u001b[39minput\u001b[39m \u001b[39m=\u001b[39m module(\u001b[39minput\u001b[39;49m)\n\u001b[1;32m    140\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39minput\u001b[39m\n",
+            "File \u001b[0;32m~/opt/anaconda3/envs/senseGAN/lib/python3.10/site-packages/torch/nn/modules/module.py:1130\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1126\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1127\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1128\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1129\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1130\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1131\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1132\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+            "File \u001b[0;32m~/opt/anaconda3/envs/senseGAN/lib/python3.10/site-packages/torch/nn/modules/container.py:139\u001b[0m, in \u001b[0;36mSequential.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    137\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m):\n\u001b[1;32m    138\u001b[0m     \u001b[39mfor\u001b[39;00m module \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m:\n\u001b[0;32m--> 139\u001b[0m         \u001b[39minput\u001b[39m \u001b[39m=\u001b[39m module(\u001b[39minput\u001b[39;49m)\n\u001b[1;32m    140\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39minput\u001b[39m\n",
+            "File \u001b[0;32m~/opt/anaconda3/envs/senseGAN/lib/python3.10/site-packages/torch/nn/modules/module.py:1130\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   1126\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   1127\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   1128\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   1129\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> 1130\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   1131\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   1132\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+            "File \u001b[0;32m~/opt/anaconda3/envs/senseGAN/lib/python3.10/site-packages/torch/nn/modules/conv.py:307\u001b[0m, in \u001b[0;36mConv1d.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    306\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> 307\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_conv_forward(\u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbias)\n",
+            "File \u001b[0;32m~/opt/anaconda3/envs/senseGAN/lib/python3.10/site-packages/torch/nn/modules/conv.py:303\u001b[0m, in \u001b[0;36mConv1d._conv_forward\u001b[0;34m(self, input, weight, bias)\u001b[0m\n\u001b[1;32m    299\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpadding_mode \u001b[39m!=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mzeros\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m    300\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39mconv1d(F\u001b[39m.\u001b[39mpad(\u001b[39minput\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reversed_padding_repeated_twice, mode\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpadding_mode),\n\u001b[1;32m    301\u001b[0m                     weight, bias, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstride,\n\u001b[1;32m    302\u001b[0m                     _single(\u001b[39m0\u001b[39m), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdilation, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgroups)\n\u001b[0;32m--> 303\u001b[0m \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mconv1d(\u001b[39minput\u001b[39;49m, weight, bias, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstride,\n\u001b[1;32m    304\u001b[0m                 \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpadding, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdilation, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgroups)\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: Given groups=1, weight of size [1440, 1, 1], expected input[1440, 1440, 1] to have 1 channels, but got 1440 channels instead"
+          ]
+        }
+      ],
       "source": [
         "cur_step = 0\n",
         "generator_losses = []\n",
@@ -233,8 +247,8 @@
         "            crit_fake_pred = crit(fake.detach())\n",
         "            crit_real_pred = crit(torch.transpose(real, 0, 1))\n",
         "\n",
-        "            epsilon = torch.rand(len(real), 1, 1, 1, device=device, requires_grad=True)\n",
-        "            gradient = sensegan.get_gradient(crit, real, fake.detach(), epsilon)\n",
+        "            epsilon = torch.rand(len(real), 1, 1, device=device, requires_grad=True)\n",
+        "            gradient = sensegan.get_gradient(crit, torch.transpose(real, 0, 1), fake.detach(), epsilon)\n",
         "            gp = sensegan.gradient_penalty(gradient)\n",
         "            crit_loss = sensegan.get_crit_loss(crit_fake_pred, crit_real_pred, gp, c_lambda)\n",
         "\n",
